fix bug #37800: preg_replace() limit parameter odd behaviour #this is a regression in PHP_5_2 and HEAD branches only

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@214841 c90b9560-bf6c-de11-be94-00142212c4b1